Changes to drawing: Seen map is no longer drawn on an offscreen canvas with globalalpha. Instead, draw on a transluscent canvas layered on top of the main canvas.

--- a/src/eschack.scss
+++ b/src/eschack.scss
@@ -43,8 +43,12 @@ body {
 canvas {
 	display: block;
 	
-	&#canvas-offscreen {
-		@include Offscreen();
+	&#canvas-second {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		opacity: 0.3;
 	}
 }
 
